aux_source_directory (. SRC_LIST)
include_directories (../include ../include/msgpack)
link_directories (${PROJECT_SOURCE_DIR}/libs)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -pthread -std=c++17")
add_executable (zeg_message_interface ${SRC_LIST})
set (EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
target_link_libraries (zeg_message_interface zmq)
